<resources>
    <string name="app_name">VanApp</string>
    <string name="footer_version">David Santesteban | v1.0</string>
    <string name="action_settings">Settings</string>

    <string name="titulo_login">VanApp - login</string>
    <string name="titulo_menu_principal">¿Qué quieres hacer?</string>
    <string name="titulo_usuarios">Lista de usuarios</string>
    <string name="titulo_usuario_detalle">Usuario</string>
    <string name="titulo_coches">Lista de coches</string>
    <string name="titulo_coche_detalle">Coche</string>
    <string name="titulo_usuarios_coches">Usuarios en el coche</string>
    <string name="titulo_rondas_coche">Rondas del coche</string>
    <string name="titulo_ronda_coche_detalle">Ronda del coche</string>
    <string name="titulo_elige_ronda">Elige ronda</string>
    <string name="titulo_ronda_calendario">Calendario ronda</string>
    <string name="titulo_informes">Informes</string>
    <string name="titulo_informe_total_conducciones">Informe total de conducciones</string>
    <string name="titulo_usuario_selecciona">Selecciona un usuario</string>
    <string name="titulo_acerca_de">Acerca de</string>
    <string name="tituloConfirmaSalir">Confirmar salir</string>
    <string name="tituloConfirmaEliminar">Confirmar eliminar</string>
    <string name="tituloIntroduceAnyoInforme">Introduce año del informe</string>

    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido1">Primer apellido</string>
    <string name="hint_apellido2">Segundo apellido</string>
    <string name="hint_alias">Alias</string>
    <string name="hint_email">Email</string>
    <string name="hint_fecha_alta">Fecha de alta</string>
    <string name="hint_fecha_inicio">Fecha de inicio</string>
    <string name="hint_fecha_fin">Fecha fin</string>
    <string name="hint_num_plazas">Número de plazas</string>
    <string name="hint_matricula">Matrícula</string>

    <string name="txtLogOff">Salir</string>
    <string name="txtNuevo">Nuevo</string>
    <string name="txtNueva">Nueva</string>
    <string name="txtEligeCoche">Elige coche</string>
    <string name="txtEligeRonda">Elige ronda</string>
    <string name="txtIrAlCalendario">Ir al calendario</string>
    <string name="txtVincularUsuarioEnCoche">Vincular un usuario</string>
    <string name="txtEliminarTodosLosUsuarios">Eliminar usuarios</string>
    <string name="txtEliminarTodosLosCoches">Eliminar coches</string>
    <string name="txtEliminarTodasLasRondas">Eliminar rondas</string>
    <string name="txtPersonalizacion">Mis cosas</string>
    <string name="txtUsuariosEnCoche">Usuarios en el coche</string>
    <string name="txtRondasEnCoche">Rondas en el coche</string>
    <string name="txtLimpiarValores">Limpiar valores</string>
    <string name="txtCoche">Coche</string>
    <string name="txtConduce">¿Conduce?</string>
    <string name="txtRondaFinalizada">¿Ronda finalizada?</string>
    <string name="txtEliminar">Eliminar</string>
    <string name="txtAceptar">Aceptar</string>
    <string name="txtCancelar">Cancelar</string>
    <string name="txtFechaInicio">Fecha inicio</string>
    <string name="txtFechaFin">Fecha de fin</string>
    <string name="txtRango">Rango</string>
    <string name="txtEligeConductor">Elige conductor</string>
    <string name="txtConductorElegido">Conductor elegido</string>
    <string name="txtPosiblesConductores">Posibles conductores</string>
    <string name="txtGuardar">Guardar</string>
    <string name="txtBuscar">Buscar</string>
    <string name="txtTotalConducciones">Total conducciones: </string>
    <string name="txtAnyoBusqueda">Año de búsqueda: </string>
    <string name="txtGitHub">Ir a Github</string>

    <string name="opcionUsuarios">Usuarios</string>
    <string name="opcionCoches">Coches</string>
    <string name="opcionCalendario">Calendario</string>
    <string name="opcionInformes">Informes</string>
    <string name="opcionSalir">Salir</string>
    <string name="opcionRondas">Rondas</string>
    <string name="opcionQuienesSomos">Quiénes somos</string>

    <string name="msgInfoColorSeleccionado">Color seleccionado</string>
    <string name="msgInfoEligeColor">Elige color</string>
    <string name="msgErrorValorInvalido">El campo tiene un valor o longitud inválida</string>

    <string name="msgConfirmarSalir">Qué pena, ¿de verdad te quieres marchar? :(</string>
    <string name="msgConfirmarEliminarTodosUsuarios">Wow, esta acción eliminará todos los usuarios y los datos relacionados ¿deseas continuar?</string>
    <string name="msgConfirmarEliminarUsuario">Wow, esta acción eliminará el usuario y los datos relacionados ¿deseas continuar?</string>
    <string name="msgConfirmarEliminarRonda">Wow, esta acción eliminará la ronda y los datos relacionados ¿deseas continuar?</string>
    <string name="msgConfirmarEliminarRelacionUsuarioCoche">Wow, esta acción eliminará el usuario con el coche ¿deseas continuar?</string>
    <string name="msgConfirmarEliminarTodosCoches">Wow, esta acción eliminará todos los coches y los datos relacionados ¿deseas continuar?</string>
    <string name="msgConfirmarEliminarCoche">Wow, esta acción eliminará el coche y los datos relacionados ¿deseas continuar?</string>
    <string name="msgConfirmarEliminarTodasRondas">Wow, esta acción eliminará todas las rondas del coche ¿deseas continuar?</string>
    <string name="msgOperacionOk">Operación realizada correctamente</string>
    <string name="msgOperacionKo">Ups, ¿seguro que había algo para hacer en esta acción? :(</string>
    <string name="msgDatosIncorrectos">Me parece que los datos son incorrectos</string>
    <string name="msgRondaCerrada">La ronda se encuentra cerrada, para realizar cambios, debes abrirla</string>
    <string name="msgEleccionCalendarioOk">Elección completa, puedes acceder al calendario si lo deseas</string>
    <string name="msgProximaVersion">¡Tendrás que esperar a la siguiente versión! :)</string>
    <string name="msgNoExistenUsuarios">Antes de entrar a esta opción, debes crear usuarios</string>
    <string name="msgNoExistenRondas">Antes de entrar a esta opción, debes crear rondas dentro del coche</string>
    <string name="msgExistenRondasAsignadasParaUsuario">El usuario tiene turnos de conducción, antes de eliminar el usuario, eliminar sus turnos desde el calendario</string>

</resources>
