<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Rondas.RondaCocheDetalleActivity">

    <include layout="@layout/menu_layout"/>

    <LinearLayout
        android:id="@+id/contenido"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_activities"
        android:orientation="vertical">

        <!-- Campo Alias -->
        <LinearLayout
            android:id="@+id/area_alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_alias"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_alias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_pets" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_usuario_columna_insertar_datos"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/txt_alias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30"
                    android:ems="10"
                    android:hint="@string/hint_alias"
                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <!-- Campo Es Ronda finalizada -->
        <LinearLayout
            android:id="@+id/area_es_ronda_finalizada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_es_ronda_finalizada"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_es_ronda_finalizada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_timer" />
            <Switch
                android:id="@+id/switchRondaFinalizada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_usuario_columna_insertar_datos"
                android:text=""
                android:checked="true"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <TextView
                android:id="@+id/textViewConduce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/txtRondaFinalizada" />
        </LinearLayout>

        <!-- Campo Fecha de inicio -->
        <LinearLayout
            android:id="@+id/area_fecha_inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_fecha_inicio"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_fecha_inicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_date_range" />
            <TextView
                android:id="@+id/tv_fecha_inicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_usuario_columna_insertar_datos"
                android:ems="10"
                android:hint="@string/hint_fecha_inicio"
                android:inputType="text"
                android:singleLine="true" />
            <Button
                android:id="@+id/boton_FechaInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_usuario_columna_insertar_datos"
                android:text="@string/txtFechaInicio" />


        </LinearLayout>

        <!-- Campo Fecha de fin -->
        <LinearLayout
            android:id="@+id/area_fecha_fin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/area_fecha_alta"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_fecha_fin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_date_range" />
            <TextView
                android:id="@+id/tv_fecha_fin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_usuario_columna_insertar_datos"
                android:ems="10"
                android:hint="@string/hint_fecha_fin"
                android:inputType="text"
                android:singleLine="true" />
            <Button
                android:id="@+id/boton_FechaFin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_usuario_columna_insertar_datos"
                android:text="@string/txtFechaFin"
                />

        </LinearLayout>

        <!-- Barra de botones -->
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/boton_eliminar"
                style="?android:attr/buttonBarButtonStyle"
                android:textColor="@android:color/holo_red_dark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtEliminar" />

            <Button
                android:id="@+id/boton_cancelar"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtCancelar" />

            <Button
                android:id="@+id/boton_aceptar"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtAceptar" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>