<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Calendario.CalendarioRondaDetalleActivity">

    <include layout="@layout/menu_layout"/>
    <include layout="@layout/list_item_ronda"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/calendarioRonda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:mcv_showOtherDates="all"
        app:mcv_allowClickDaysOutsideCurrentMonth="false"
        app:mcv_selectionColor="@color/colorPrimary"
        app:mcv_firstDayOfWeek="monday"
        />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/botonMostrarRango"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/holo_red_dark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtRango" />

        <Button
            android:id="@+id/boton_cancelar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtCancelar" />

        <Button
            android:id="@+id/boton_aceptar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtAceptar" />
    </LinearLayout>

</LinearLayout>