<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Common.UsuariosCochesActivity">

    <include layout="@layout/menu_layout"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_activities"
        android:orientation="horizontal" >
        <TextView
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/tamanioLetraTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/paddingCeldasNormal"
            android:text="@string/txtCoche" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_alignBottom="@id/textViewMatricula" />

    <include layout="@layout/list_item_coche"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_activities"
        android:orientation="horizontal" >
        <TextView
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/tamanioLetraTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/paddingCeldasNormal"
            android:text="@string/txtUsuariosEnCoche" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_alignBottom="@id/textViewMatricula" />

    <ListView
        android:id="@+id/listViewUsuariosEnElCoche"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clickable="true"
        android:layout_weight="1"/>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnVincularUsuario"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawable="@drawable/ic_add_circle_outline"
            android:text="@string/txtVincularUsuarioEnCoche" />

    </LinearLayout>

</LinearLayout>